--- a/kodusorClient/kodusorClient/Views/Profil/SoruSor.cshtml
+++ b/kodusorClient/kodusorClient/Views/Profil/SoruSor.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "SoruSor";
-    Layout = "~/Views/Shared/_LayoutProfil.cshtml";
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
 <div class="row">
@@ -9,25 +9,25 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">label_outline</i>
-                <input id="icon_prefix" type="text" class="validate">
+                <input id="icon_prefix" type="text" class="baslik validate" value="">
                 <label for="icon_prefix">Başlık</label>
             </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">mode_edit</i>
-                <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+                <textarea id="icon_prefix2" class="icerik materialize-textarea"></textarea>
                 <label for="icon_prefix2">Soru içeriği</label>
             </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">loyalty</i>
                 <div class="chips chips-placeholder"></div>
             </div>
-            <button class="btn waves-effect blue-grey lighten-1" type="submit" name="action">
-                Gönder
-                <i class="material-icons right">send</i>
-            </button>
+           
         </div>
     </form>
-    
+    <button id="kaydet" class="btn waves-effect blue-grey lighten-1">
+        Gönder
+        <i class="material-icons right">send</i>
+    </button>
 </div>
 
 
@@ -38,6 +38,29 @@
     });
     $('#textarea1').val('New Text');
     $('#textarea1').trigger('autoresize');
+
+    $(function () {
+        $("#kaydet").click(function () {
+            var soru = {
+                Baslik : $(".baslik").val(),
+                Icerik: $(".icerik").val()
+                
+            };
+            var etiket = [];
+            $(".chip").each(function () {
+                etiket.push($(this).text().slice(0, -5));
+            });
+            console.log(etiket);
+            console.log(soru);
+
+            $.post("/Profil/SoruyuKaydet", { soru: soru, etiketler: etiket }, function (sonuc) {
+                if (sonuc == "+")
+                    alert("Kayıt başarılı");
+                else
+                    alert("Veritabanı bağlantı hatası");
+            });
+        });
+    });
 </script>
 
 
